Fix issue where sections were overlapping.

--- a/assets/css/graduation.css
+++ b/assets/css/graduation.css
@@ -1105,7 +1105,7 @@ p.graduating-list a {
   }
 
   .inner-container {
-    height: 100vh;
+    min-height: 100vh;
   }
 
   .desktop-menu {
